HTML - Labour Site - Redesigned Version/styles.css
  @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap%27');

@media (max-width: 990px){

  #login-button{
    position: absolute;
    right: 500px;
  }


}

.top-banner{
  height: 80vh;
  width: 100vw;

}

.top-banner-text{
  padding-top: 15vh;
  text-align: center;
  font-family: 'Oswald', sans-serif;
}

.top-banner-text h1{
  font-size: 4rem;
  padding-bottom: 1.5vh;
  font-weight: bold;
}

.top-banner-text h2{
  font-size: 2.5rem;
}

@media (max-width: 767px){
  .entr{
    padding-bottom: 20px;
  }
}



.mapSearch{
  margin-left: 15vw;
  margin-right: 15vw;
  margin-top: 5vh;
  height: auto;
  background-color: #666666;
  border-radius: 15px;
  font-family: 'Oswald', sans-serif;
}

.sel{
  height: 30px;
  color: white;
}

.sel:hover{
  background-color: #e65c00;
  border-radius: 5px;
}

.mapInfoForm{
  padding-left: 20px;
  padding-right: 20px;
  padding-bottom: 20px;
}

.select-bar{
  text-align: center;
  padding-left: 50px;
  padding-right: 50px;
  padding-top: 5px;
  padding-bottom: 5px;

}


.search-btn:hover{
  color: white;
  background-color: #e65c00;
}

